animation txt + correction overflow

--- a/trobien-main/starter-example/assets/scss/common/_common.scss
+++ b/trobien-main/starter-example/assets/scss/common/_common.scss
@@ -225,6 +225,7 @@ header img {
 .Lights__text {
   text-align: right;
   width: 50%;
+  overflow: hidden;
 }
 .Lights__text h1{
   font-size: 4rem;
